# takotori-web

./: .gitignore  LICENSE  README.md  compose.yaml
.github/workflows/: publish.yaml  publishBackend.yaml  publishFrontend.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  postgres.rs  user.rs
frontend/: Dockerfile  dev.Dockerfile  nginx.conf  package-lock.json  package.json
