[package]
name = "takotori-web"
version = "0.1.0"
authors = ["takotori"]
edition = "2021"

[dependencies]
actix-web = "4.4.0"
deadpool-postgres = "0.11.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio-postgres = "0.7.10"
tokio-postgres-migration = "0.1.0"
